tests/errors/test_04.x
// Identifier undeclared

fn main() -> i64 {
    let x: i64 = y;
}